fix: movie page styling on mobile

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -15,6 +15,8 @@
   }
 
   .grid-movie {
-    grid-template-columns: 20px 1fr 440px 700px 1fr 20px;
+    grid-template-columns:
+      20px 1fr minmax(min-content, 440px) minmax(min-content, 700px)
+      1fr 20px;
   }
 }
